# indstudy

./: .gitignore  TODO  docker-compose.yaml  test.txt
backend/: Dockerfile  cfg_loader.py  main.py  populate.py  pyproject.toml  schema.py  server.py  setup.cfg  utils.py
backend/app/: cfg_loader.py  db.py  main.py  populate.py  pyproject.toml  schema.py
backend/app/load_test/: users.py
backend/app/routers/: categories.py  orders.py  products.py
backend/data/: orders_10000.csv  users_10000.csv
backend/dev/: populate.py
backend/load_test/: browsing_user.py
backend/routers/: auth.py  categories.py  products.py  test.py
data/: users_10000.csv
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  constant.ts  index.tsx  utils.ts
frontend/src/app/: store.ts
frontend/src/assets/: failures_1649707602.12473.csv  requests_1649706164.6696796.csv  requests_1649707563.1957314.csv
frontend/src/components/: AppBar.tsx  CategoryBar.tsx  Switcher.tsx  api.tsx  hooks.tsx
frontend/src/features/cart/: cartSlice.ts
frontend/src/features/home/: homeSlice.ts
frontend/src/features/order/: api.ts  hooks.ts  types.ts
frontend/src/features/product/: ProductDetailed.tsx  ProductPreview.tsx  ProductRandomPage.tsx  api.ts  hooks.ts  productSlice.ts  sample.ts  types.ts
frontend/src/features/user/: api.ts  userSlice.ts
frontend/src/pages/: HomePage.tsx  LoginView.tsx  OrderDetails.tsx
frontend/src/styles/: App.styles.ts  Theme.ts
