[tool.poetry]
name = "shopping-app-backend"
version = "0.1.0"
description = ""
authors = ["keerthisaraa <keerthisaraaa@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"
SQLAlchemy = "^1.4.32"
PyMySQL = "^1.0.2"
pandas = "^1.4.1"
pip = "^22.0.4"
install = "^1.3.5"
python-dotenv = "^0.19.2"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]
ipykernel = "^6.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
